--- a/google-map.html
+++ b/google-map.html
@@ -69,7 +69,7 @@ If you're seeing the message "You have included the Google Maps API multiple tim
     }
 
     #map {
-      position: absolute;
+      position: absolute !important;
       top: 0;
       right: 0;
       bottom: 0;
